# Archon

./: README.md
archon/: Cargo.toml  INSTALL.md  README.md  go.mod  go.sum  install.sh  main.go  uninstall.sh
archon/internal/api/: client.go  node.go
archon/internal/app/: app.go  handlers.go  messages.go
archon/internal/compose/: parser.go  parser_test.go
archon/internal/config/: config.go  loader.go
archon/internal/dns/: provider.go
archon/internal/dns/cloudflare/: cloudflare.go
archon/internal/models/: node.go  site.go
archon/internal/state/: state.go
archon/internal/ui/: render.go  styles.go
archon/internal/ui/components/: button.go  statusbar.go  table.go  tabs.go
archon/internal/ui/screens/: dashboard.go  domains.go  help.go  nodes.go  settings.go  sites.go
archon/src/: app.rs  main.rs
archon/src/api/: client.rs  error.rs  mod.rs  node_client.rs
archon/src/config/: loader.rs  mod.rs  schema.rs
archon/src/dns/: cloudflare.rs  mod.rs  provider.rs
archon/src/events/: actions.rs  handler.rs  mod.rs
archon/src/models/: dns.rs  domain.rs  mod.rs  node.rs  site.rs
archon/src/state/: app_state.rs  async_ops.rs  mod.rs  selection.rs
archon/src/ui/: mod.rs  render.rs  router.rs  theme.rs
archon/src/ui/components/: form.rs  menu.rs  mod.rs  text_editor.rs
archon/src/ui/screens/: dashboard.rs  help.rs  mod.rs
archon/src/ui/screens/domains/: create.rs  dns_editor.rs  list.rs  mod.rs
archon/src/ui/screens/nodes/: create.rs  detail.rs  edit.rs  list.rs  mod.rs
archon/src/ui/screens/sites/: create.rs  detail.rs  edit.rs  list.rs
(+62 files in other folders)
