[package]
name = "archon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing TUI dependencies
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client (using rustls instead of openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration directories
directories = "5.0"

[dev-dependencies]
tempfile = "3.23"